Added the xml file 'activity_user_history_page', and its corresponding java file 'UserHistoryPage' that will act as the activity for each user's booking history. Implemented the Booking class in the 'Booking.java' file. Made minor fixes to 'activity_rate_service.xml'.

--- a/app/src/main/res/layout/activity_rate_service.xml
+++ b/app/src/main/res/layout/activity_rate_service.xml
@@ -21,8 +21,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.441" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btnSubmit"
@@ -41,7 +40,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ratingBar"
-        app:layout_constraintVertical_bias="0.368" />
+        app:layout_constraintVertical_bias="0.287" />
 
     <TextView
         android:id="@+id/txtRatingResult"
@@ -86,13 +85,18 @@
         android:id="@+id/txtServiceName"
         android:layout_width="wrap_content"
         android:layout_height="35dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:text="Service Name"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/ratingBar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtProviderName"
-        app:layout_constraintVertical_bias="0.471"
-        tools:layout_editor_absoluteX="119dp" />
+        app:layout_constraintVertical_bias="0.471" />
 
 </android.support.constraint.ConstraintLayout>
