--- a/app/src/main/res/layout/activity_provider_search.xml
+++ b/app/src/main/res/layout/activity_provider_search.xml
@@ -59,7 +59,7 @@
         app:layout_constraintVertical_bias="0.11" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/addTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/search_field"
