--- a/app/src/main/res/layout/activity_provider_search.xml
+++ b/app/src/main/res/layout/activity_provider_search.xml
@@ -71,10 +71,10 @@
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="48dp"
-        android:text="Search"
+        android:text="Service Search"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.825"
+        app:layout_constraintHorizontal_bias="0.982"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.034" />
@@ -121,24 +121,47 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.232" />
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/result_list"
-        android:layout_width="348dp"
-        android:layout_height="286dp"
-        android:layout_alignLeft="@+id/search_field"
-        android:layout_alignParentBottom="true"
-        android:layout_alignStart="@+id/search_field"
+    <Button
+        android:id="@+id/rateSearchButt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
+        android:layout_marginLeft="236dp"
+        android:layout_marginStart="236dp"
+        android:layout_marginTop="8dp"
+        android:text="Search by Rate"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.357" />
+
+    <ListView
+        android:id="@+id/listings"
+        android:layout_width="368dp"
+        android:layout_height="242dp"
+        android:layout_marginBottom="17dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="172dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.728"></android.support.v7.widget.RecyclerView>
+        app:layout_constraintVertical_bias="0.852" />
+
+    <Button
+        android:id="@+id/button5"
+        android:layout_width="115dp"
+        android:layout_height="52dp"
+        android:layout_marginLeft="236dp"
+        android:layout_marginStart="236dp"
+        android:layout_marginTop="124dp"
+        android:text="Search for Provider"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </android.support.constraint.ConstraintLayout>
