--- a/app/src/main/res/layout/activity_set_time.xml
+++ b/app/src/main/res/layout/activity_set_time.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,12 +8,11 @@
     <Button
         android:id="@+id/setTime"
         android:layout_width="162dp"
-        android:layout_height="66dp"
-        android:layout_marginBottom="16dp"
-        android:layout_marginEnd="108dp"
-        android:layout_marginLeft="108dp"
-        android:layout_marginRight="108dp"
+        android:layout_height="54dp"
         android:layout_marginStart="108dp"
+        android:layout_marginLeft="108dp"
+        android:layout_marginEnd="108dp"
+        android:layout_marginRight="108dp"
         android:text="Set Time"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -24,11 +22,10 @@
         android:id="@+id/textView17"
         android:layout_width="87dp"
         android:layout_height="28dp"
-        android:layout_marginEnd="35dp"
-        android:layout_marginLeft="70dp"
-        android:layout_marginRight="35dp"
         android:layout_marginStart="70dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginLeft="70dp"
+        android:layout_marginEnd="35dp"
+        android:layout_marginRight="35dp"
         android:text="End Time"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textSize="18sp"
@@ -39,54 +36,58 @@
     <EditText
         android:id="@+id/endMinute2"
         android:layout_width="71dp"
-        android:layout_height="53dp"
+        android:layout_height="45dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:layout_marginBottom="90dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginRight="10dp"
         android:ems="10"
         android:hint="Minute"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView17" />
+        app:layout_constraintTop_toBottomOf="@+id/textView17"
+        app:layout_constraintVertical_bias="0.023" />
 
     <EditText
         android:id="@+id/startMinute2"
         android:layout_width="71dp"
-        android:layout_height="53dp"
-        android:layout_marginBottom="6dp"
+        android:layout_height="42dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginLeft="4dp"
         android:layout_marginTop="1dp"
+        android:layout_marginBottom="6dp"
         android:ems="10"
         android:hint="Minute"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toTopOf="@+id/setTime"
         app:layout_constraintStart_toEndOf="@+id/startHour2"
-        app:layout_constraintTop_toBottomOf="@+id/textView16" />
+        app:layout_constraintTop_toBottomOf="@+id/textView16"
+        app:layout_constraintVertical_bias="0.0" />
 
     <EditText
         android:id="@+id/startHour2"
         android:layout_width="71dp"
-        android:layout_height="53dp"
-        android:layout_marginBottom="89dp"
-        android:layout_marginLeft="10dp"
+        android:layout_height="44dp"
         android:layout_marginStart="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginBottom="89dp"
         android:ems="10"
         android:hint="Hour:"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/startMinute2"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView16" />
+        app:layout_constraintTop_toBottomOf="@+id/textView16"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/textView16"
         android:layout_width="92dp"
         android:layout_height="29dp"
-        android:layout_marginEnd="70dp"
-        android:layout_marginLeft="35dp"
-        android:layout_marginRight="70dp"
         android:layout_marginStart="35dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginLeft="35dp"
+        android:layout_marginEnd="70dp"
+        android:layout_marginRight="70dp"
         android:text="Start Time"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textSize="18sp"
@@ -94,15 +95,34 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/calendarSet" />
 
+    <TextView
+        android:id="@+id/textView15"
+        android:layout_width="231dp"
+        android:layout_height="29dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        android:text="Choose lowest rating shown"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/calendarSet"
+        app:layout_constraintVertical_bias="0.384" />
+
     <CalendarView
         android:id="@+id/calendarSet"
         android:layout_width="360dp"
         android:layout_height="349dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="9dp"
-        android:layout_marginRight="8dp"
         android:layout_marginStart="9dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginLeft="9dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.428"
         app:layout_constraintStart_toStartOf="parent"
@@ -111,12 +131,69 @@
     <EditText
         android:id="@+id/endHour2"
         android:layout_width="70dp"
-        android:layout_height="52dp"
+        android:layout_height="45dp"
         android:layout_marginBottom="9dp"
         android:ems="10"
         android:hint="Hour:"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toTopOf="@+id/setTime"
         app:layout_constraintEnd_toStartOf="@+id/endMinute2"
-        app:layout_constraintTop_toBottomOf="@+id/textView17" />
+        app:layout_constraintTop_toBottomOf="@+id/textView17"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <RadioGroup
+        android:layout_width="289dp"
+        android:layout_height="43dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.505"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.879" >
+
+        <RadioButton
+            android:id="@+id/0Stars"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Any" />
+
+        <RadioButton
+            android:id="@+id/1Stars"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="1" />
+
+        <RadioButton
+            android:id="@+id/2Stars"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="2" />
+
+        <RadioButton
+            android:id="@+id/3Stars"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="3" />
+
+        <RadioButton
+            android:id="@+id/4Stars"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="4" />
+
+        <RadioButton
+            android:id="@+id/5Stars"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="5" />
+    </RadioGroup>
 </android.support.constraint.ConstraintLayout>
