--- a/app/src/main/res/layout/activity_set_time.xml
+++ b/app/src/main/res/layout/activity_set_time.xml
@@ -142,6 +142,7 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <RadioGroup
+        android:id="@+id/radioGroup"
         android:layout_width="289dp"
         android:layout_height="43dp"
         android:layout_marginTop="8dp"
@@ -152,14 +153,14 @@
         app:layout_constraintHorizontal_bias="0.505"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.879" >
+        app:layout_constraintVertical_bias="0.879">
 
         <RadioButton
             android:id="@+id/0Stars"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Any" />
+            android:text="0" />
 
         <RadioButton
             android:id="@+id/1Stars"
