--- a/app/src/main/res/layout/activity_user_get_provider_info.xml
+++ b/app/src/main/res/layout/activity_user_get_provider_info.xml
@@ -24,7 +24,7 @@
         android:layout_height="96dp"
         android:layout_marginLeft="72dp"
         android:layout_marginStart="72dp"
-        android:layout_marginTop="120dp"
+        android:layout_marginTop="92dp"
         android:text="here is where the info could go"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -48,7 +48,7 @@
         android:id="@+id/textView17"
         android:layout_width="229dp"
         android:layout_height="59dp"
-        android:layout_marginBottom="232dp"
+        android:layout_marginBottom="284dp"
         android:layout_marginLeft="16dp"
         android:layout_marginStart="16dp"
         android:text="Choose a time (Note: a list would be under this to show times)"
@@ -65,4 +65,14 @@
         android:text="Chosen Time: "
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <ListView
+        android:id="@+id/timesListings"
+        android:layout_width="368dp"
+        android:layout_height="142dp"
+        android:layout_marginBottom="140dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 </android.support.constraint.ConstraintLayout>
