--- a/app/src/main/res/layout/activity_user_get_provider_info.xml
+++ b/app/src/main/res/layout/activity_user_get_provider_info.xml
@@ -57,8 +57,8 @@
 
     <TextView
         android:id="@+id/textView18"
-        android:layout_width="142dp"
-        android:layout_height="26dp"
+        android:layout_width="92dp"
+        android:layout_height="24dp"
         android:layout_marginBottom="100dp"
         android:layout_marginLeft="28dp"
         android:layout_marginStart="28dp"
@@ -73,6 +73,16 @@
         android:layout_marginBottom="140dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        android:id="@+id/textView19"
+        android:layout_width="259dp"
+        android:layout_height="23dp"
+        android:layout_marginBottom="100dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginRight="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 </android.support.constraint.ConstraintLayout>
