Implemented Rating for each service that has been booked. - app crashes when selecting the booking from the user history.

--- a/app/src/main/res/layout/activity_rate_service.xml
+++ b/app/src/main/res/layout/activity_rate_service.xml
@@ -21,7 +21,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.334" />
 
     <Button
         android:id="@+id/btnSubmit"
@@ -40,7 +41,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ratingBar"
-        app:layout_constraintVertical_bias="0.287" />
+        app:layout_constraintVertical_bias="0.677" />
 
     <TextView
         android:id="@+id/txtRatingResult"
@@ -56,7 +57,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnSubmit" />
+        app:layout_constraintTop_toBottomOf="@+id/btnSubmit"
+        app:layout_constraintVertical_bias="0.557" />
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline9"
@@ -71,7 +73,7 @@
         android:layout_height="41dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="40dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:text="Provider Name"
@@ -98,5 +100,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtProviderName"
         app:layout_constraintVertical_bias="0.471" />
+
+    <EditText
+        android:id="@+id/txtComment"
+        android:layout_width="328dp"
+        android:layout_height="155dp"
+        android:ems="10"
+        android:inputType="textMultiLine"
+        tools:layout_editor_absoluteX="29dp"
+        tools:layout_editor_absoluteY="250dp" />
 
 </android.support.constraint.ConstraintLayout>
